# fastapi-k6-load-testing

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
fastapi_k6_load_testing/: main.py
scripts/: breakpoint.js  test.js
tests/: test_fastapi_k6_load_testing.py
