[tool.poetry]
name = "fastapi-k6-load-testing"
version = "0.1.0"
description = ""
authors = ["Adolfo Silva <code@adolfosilva.org>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
